--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
     <nav>
         <section class="container">
-            <div class="logo">Sit <span class="txtColour1">on</span> chair</div>
+            <div class="logo">Sit <span class="txtColor1">on</span> chair</div>
             <ul class="menu">
                 <li><a href="#">O firmie</a>
                     <ul>
@@ -31,7 +31,7 @@
             <li>
                 <img src="img/black_chair.png">
                 <div>
-                    <h3>Sit <span class="txtColour1">on</span> our <span class="txtColour1">chair</span></h3>
+                    <h3>Sit <span class="txtColor1">on</span> our <span class="txtColor1">chair</span></h3>
                     <p>Mauris pretium, diam a arcu. Vestibulum rutrum vel, hendrerit nonummy.
                         Nam turpis id wisi accumsan sit amet augue. Morbi tellus.
                         Suspendisse ac dolor. In bibendum eget, sagittis non, posuere cubilia Curae, Nulla eu mollis non, nunc.
@@ -47,7 +47,127 @@
 
 </header>
 
+<main>
+    <section class="boxes container">
+        <div class="box">
+            <a href="#"><img src="img/box1_img.jpg"></a>
+            <div class="transparentBg">
+                <p>Chair CLAIR</p>
+                <div class="line"></div>
+            </div>
+        </div>
+        <div class="box middle">
+            <a href="#"><img src="img/box2_img.jpg"></a>
+            <div class="transparentBg">
+                <p>Chair MARGARITA</p>
+                <div class="line"></div>
+            </div>
+        </div>
+        <div class="articleBox">
+            <p><strong>Find all inputs</strong></p>
+            <div class="line"></div>
+            <p class="txtColor2">Praesent id augue viverra, porta tortor non, sollicitudin. Praesent id augue viverra, porta tortor non, sollicitudin. Donec faucibus leo non dui cursus, in auctor ligula sollicitudin. Praesent id augue viverra, porta tortor non, sollicitudin diam.</p>
+            <p class="txtColor2"> Nunc pharetra justo vel enim accumsan auctor. Praesent id augue viverra, porta tortor non, sollicitudin. Praesent id augue viverra, porta tortor non, sollicitudin.Lorem impsum.</p>
+        </div>
+    </section>
 
+    <section class="pricePlan">
+        <section class="container">
+            <p>CENNIK</p>
+            <div class="line"></div>
+            <ul>
+                <li id="basic">
+                    <div class="outsideSquare">
+                        <div class="insideSquare"></div>
+                    </div>
+                    <div class="price">
+                        <p class="txtColor1">BASIC PLAN</p>
+                        <div>
+                            <p>85.99</p>
+                            <p>PLN/MSC</p>
+                        </div>
+                        <p class="delivery">Zakup towaru i dowóz</p>
+                        <p class="service">Serwis</p>
+                        <input type="button" value="DOŁĄCZ" class="join">
+                    </div>
+                </li>
+
+                <li id="standard">
+                    <div class="outsideSquare">
+                        <div class="insideSquare"></div>
+                    </div>
+                    <div class="price">
+                        <p class="txtColor1">STANDARD PLAN</p>
+                        <div>
+                            <p>95.99</p>
+                            <p>PLN/MSC</p>
+                        </div>
+                        <p class="delivery">Zakup towaru i dowóz</p>
+                        <p class="service">Serwis</p>
+                        <p class="guarantee">Gwarancja 5 lat</p>
+                        <input type="button" value="DOŁĄCZ" class="join">
+                    </div>
+                </li>
+
+                <li id="advanced">
+                    <div class="outsideSquare">
+                        <iv class="insideSquare"></iv>
+                    </div>
+                    <div class="price">
+                        <p class="txtColor1">ADVANCED PLAN</p>
+                        <div>
+                            <p>211.99</p>
+                            <p>PLN/MSC</p>
+                        </div>
+                        <p class="delivery">Zakup towaru i dowóz</p>
+                        <p class="service">Serwis</p>
+                        <p class="guarantee">Gwarancja 6 lat</p>
+                        <p class="bonus">Porady projektanta</p>
+                        <input type="button" value="DOŁĄCZ" class="join">
+                    </div>
+                </li>
+            </ul>
+
+        </section>
+
+    </section>
+
+
+    <section class="contactForm container">
+        <div id="contact">
+            <p>KONTAKT</p>
+            <div class="line"></div>
+            <form>
+                <input type="text" placeholder="Imię">
+                <input type="email" placeholder="email">
+                <textarea placeholder="Wiadomość"></textarea>
+            </form>
+        </div>
+        <div id="sendForm">
+            <img src="img/red_chair.png">
+            <form>
+                <input type="checkbox" id="agreement"checked>
+                <label for="agreement">
+                    <p>Zgadzam sie na przetwarzanie</p>
+                    <p>danych osobowych</p>
+                </label>
+                <input type="submit" value="Wyślij" class="join">
+            </form>
+        </div>
+    </section>
+    
+</main>
+
+<footer class="container">
+        <div>Copyright 2014 | All rights Reserved. - Sit On Chair</div>
+        <div>
+            <a href="#"><img src="img/flickr.png"></a>
+            <a href="#"><img src="img/vimeo.png"></a>
+            <a href="#"><img src="img/pinterest.png"></a>
+            <a href="#"><img src="img/twitter.png"></a>
+            <p>SIT <span>ON</span> CHAIR</p>
+        </div>
+</footer>
 
 </body>
 </html>
