--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>SIT ON CHAIR</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <!--<link rel="stylesheet" href="css/main.css">-->
 </head>
 <body>
 <header>
@@ -155,18 +157,18 @@
             </form>
         </div>
     </section>
-    
+
 </main>
 
 <footer class="container">
-        <div>Copyright 2014 | All rights Reserved. - Sit On Chair</div>
-        <div>
-            <a href="#"><img src="img/flickr.png"></a>
-            <a href="#"><img src="img/vimeo.png"></a>
-            <a href="#"><img src="img/pinterest.png"></a>
-            <a href="#"><img src="img/twitter.png"></a>
-            <p>SIT <span>ON</span> CHAIR</p>
-        </div>
+    <div>Copyright 2014 | All rights Reserved. - Sit On Chair</div>
+    <div>
+        <a href="#"><img src="img/flickr.png"></a>
+        <a href="#"><img src="img/vimeo.png"></a>
+        <a href="#"><img src="img/pinterest.png"></a>
+        <a href="#"><img src="img/twitter.png"></a>
+        <p>SIT <span>ON</span> CHAIR</p>
+    </div>
 </footer>
 
 </body>
